--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <title>Hello World!</title>
     <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>Teste</h1>
     <script src="./libs/p5.js"></script>
     <script src="./libs/dat.gui.js"></script>
     <script src="./libs/quicksettings.js"></script>
